--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -11,10 +11,10 @@
     width: 100%;
     
 }
-
+/* 
 .section{
   border-bottom: 10px solid gray;
-}
+} */
 .header{
   height: 30px;
   display: flex;
