--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,8 +1,8 @@
 <!--index.wxml-->
 <view class="container">
   <!-- 首页幻灯片 -->
-  <view class="topSwiper">
-    <swiper indicator-dots="{{indicatorDots}}" circular="{{circular}}"
+  <view class="top">
+    <swiper class="topSwiper" indicator-dots="{{indicatorDots}}" circular="{{circular}}"
       autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
       <block wx:for="{{imgUrls}}" wx:key="{{index}}">
         <swiper-item>
