--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,33 +1,31 @@
 /**index.wxss**/
 
 .topSwiper{
-  height:150px;
+  height:350rpx;
   width: 100%;
-  top: 0px;
 }
 
 .slide-image{
-    height: 100%;
-    width: 100%;
-    
+  height: 100%;
+  width: 100%;
 }
 
 .section{
-  margin-bottom: 10rpx;
+  margin-bottom: 20rpx;
 } 
 .header{
-  height: 30px;
+  height: 50rpx;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 10px;
-  padding-right: 10px;
-  font: 20px;
+  padding-left: 20rpx;
+  padding-right: 20rpx;
+  font-size: 40rpx;
 }
 
 .header-title-right{
   color: rgb(255, 115, 0);
-  font-size: 12px;
+  font-size: 25rpx;
 }
 
 .departments{
@@ -37,13 +35,13 @@
 }
 
 .department{
-  height: 70px;
-  width: 50px;
+  height: 150rpx;
+  width: 120rpx;
   position: relative;
 }
 .department image{
-  width: 50px;  
-  height: 50px;
+  width: 120rpx;  
+  height: 120rpx;
 }
 .dpmName{
   width: 100%;
@@ -51,10 +49,11 @@
   bottom: 0px;
   display: flex;
   justify-content: center;
+  font-weight: bold;
 }
 .searchbar{
   position: absolute;
   top: 0px;
   width: 100%;
-  opacity: 0.5;
+  opacity: 0.7;
 }
