--- a/pages/makeappointment/makeappointment.wxss
+++ b/pages/makeappointment/makeappointment.wxss
@@ -57,8 +57,9 @@
 }
 
 .submitButton image{
-  width: 50rpx;
-  height: 50rpx;
+  width: 100rpx;
+  height: 60rpx;
+  margin: 5rpx 5rpx;
 }
 
 .button-hover{
