--- a/pages/hospital/hospital.wxss
+++ b/pages/hospital/hospital.wxss
@@ -1,16 +1,28 @@
 /* pages/hospital/hospital.wxss */
+page{
+  height: 100%;
+}
+
 .container{
   height: 100%;
   width: 100%;
-  background-color: rebeccapurple;
+
 }
 
 .header{
   height: 30%;
-  background-color: red;
+
 }
 
 .introduce{
   height: 70%;
-  background-color: blue;
+  padding: 5%;
+
+}
+
+.introduce_content{
+  border: 1px  solid #757575;
+  height: 100%;
+  width: 100%;
+
 }
