--- a/pages/user/patientManage/patientManage.wxss
+++ b/pages/user/patientManage/patientManage.wxss
@@ -1,1 +1,30 @@
 /* pages/user/patientManage/patientManage.wxss */
+page{
+  background-color: #f8f8f8;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.patientCard{
+  width: 90%;
+  margin-top: 50rpx;
+}
+
+.addPatient{
+  height: 80rpx;
+  width: 90%;
+  margin-top: 50rpx;
+  border: 1px solid #8a8a8a;
+  border-radius: 20rpx;
+  font-size: 32rpx;
+  font-weight: bold;
+  color: #e0620d;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffff;
+}
