--- a/pages/user/visitingRecord/visitingRecord.wxss
+++ b/pages/user/visitingRecord/visitingRecord.wxss
@@ -1,1 +1,28 @@
 /* pages/user/visitingRecord/visitingRecord.wxss */
+
+page{
+  background-color: #f8f8f8;
+}
+
+.head{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #bbbbbb;
+  height: 50rpx;
+  background-color: white;
+}
+
+.head_left{
+  padding-left: 20rpx;
+  font-size: 30rpx;
+}
+
+.head_right{
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  padding-right: 20rpx;
+  color: #e0620d;
+  font-size: 30rpx;
+}
